--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <header class="navbar navbar-inner navbar-fixed-top">
+    <header class="navbar navbar-inner navbar-fixed-top" style="background-image: src(vintage.jpg)">
         <nav class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -22,8 +22,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="assets/images/people.png" alt="logo">
-                <a href="/customers" class="app-title">Customer Manager</a>
+                <img src="assets/images/blueflowers.jpg" alt="logo">
+                <a href="/customers" class="app-title">Journal</a>
             </div>
         </nav>
     </header>
