--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,7 +11,7 @@
 
 <link rel="stylesheet" href="styles.css"></head>
 <body>
-    <header class="navbar navbar-inner navbar-fixed-top">
+    <header class="navbar navbar-inner navbar-fixed-top" style="background-image: src(vintage.jpg)">
         <nav class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="assets/images/people.png" alt="logo">
+                <img src="assets/images/blueflowers.jpg" alt="logo">
                 <a href="/customers" class="app-title">Customer Manager</a>
             </div>
         </nav>
