--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head style="background-color: mintcream">
     <base href="/">
-    <title>Angular TypeScript App</title>
+    <title>Create Your Story</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Angular 2">
@@ -12,8 +12,8 @@
     <link href="assets/styles/styles.css" rel="stylesheet" />
 
 </head>
-<body>
-    <header class="navbar navbar-inner navbar-fixed-top" style="background-image: src(vintage.jpg)">
+<body style="background-color: antiquewhite">
+    <header class="navbar navbar-inner navbar-fixed-top" style="background-color: antiquewhite">
         <nav class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <div class="navbar navbar-fixed-bottom">
+        <div class="navbar navbar-fixed-bottom"  style="background-color: antiquewhite">
             <div class="navbar-inner footer">
                 <div class="container">
                     <div class="row">
